--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+*{
+  
+}
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 24px;
   line-height: 1;
 }
 
