--- a/style.css
+++ b/style.css
@@ -79,17 +79,19 @@ textarea{
 }
 .Past{
   color: #ffffff;
-  background-color: red;
+  background-color: rgb(175, 72, 72);
 }
 .future{
   background-color: green;
 }
-
+.future .btn{
+  color: #ffffff;
+}
 .Present .btn{
   color: white;
   background-color: grey;
 }
 .Past .btn{
   color: #ffffff;
-  background-color: red;
+  background-color: rgb(175, 72, 72);
 }
